# Sell_landing

./: .gitignore  CLAUDE.md  deploy.py  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  reglas_reutilizables.md  stack_tesh.md
.claude/: settings.json
Planes/: plan_LANDING-1_20260717.md
backend/: .env.example  iniciar.bat  pyproject.toml
backend/app/: main.py
backend/app/core/: config.py  database.py  logging.py  middleware.py
backend/tests/: test_health.py
docs/decisions/: ADR-001_dominio_e_identidad.md
frontend/: astro.config.mjs  iniciar.bat  package.json
frontend/src/components/landing/: Carrusel.astro  Categorias.astro  Descuentos.astro  Destacados.astro  Header.astro  PieDePagina.astro
frontend/src/features/carrito/components/: CarritoDrawer.tsx
frontend/src/features/carrito/stores/: carrito.ts
frontend/src/features/catalogo/data/: catalogo.ts
frontend/src/features/health/components/: EstadoApi.tsx
frontend/src/layouts/: Base.astro
frontend/src/pages/: index.astro
frontend/src/shared/: formato.ts
frontend/src/styles/: global.scss
